# ml_LiBs_project

./: .coverage 2  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml
data/processed/: batteries_cleaned_dataset.csv
data/raw/: GEIS.mat
docs/: ARCHITECTURE.md  MONITORING.md  USAGE.md
docs/sources/: .gitignore  .latexmkrc  Makefile  bibliography.bib  glossary.tex  main.acn  main.acr  main.alg  main.bcf  main.tex  preamble.tex  supsistudent.cls
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  i18n.ts  styles.css  types.ts
logs/: drift_report.json
models/task1/: benchmark.json
models/task2/: benchmark.json
models/task3/: benchmark.json
models/tuning/: task1_best.json  task2_best.json  task3_best.json
notebooks/: 0_mat_to_csv.ipynb  1_LeaveOneOut.ipynb  2_ClassificationAges.ipynb  3_Aging_Interpolation.ipynb
outputs/tables/: 2_classification_ages_results.csv
scripts/: make_report_figures.py  monitor.py  prepare_data.py  train_all.py  tune.py
src/: __init__.py  config.py  constants.py  logger.py  tracking.py
src/data/: features.py  loader.py  preprocessing.py
src/evaluation/: metrics.py
tests/: conftest.py  test_app_api.py  test_data.py  test_features.py  test_metrics.py  test_models.py  test_monitoring.py  test_persist_benchmarks.py  test_plots.py  test_preprocessing.py  test_tracking_tuning.py  test_tuning.py
(+37 files in other folders)
